# rusty-todo

./: Cargo.toml
.github/workflows/: test.yml
config/: config.yaml
migrations/: 20240619132158_create_tasks_table.sql
schemas/v1/: spec.yaml
scripts/: setup_db.sh
src/: config.rs  lib.rs  main.rs
src/routes/: health_check.rs  mod.rs
src/routes/v1/: tasks.rs
tests/: health_check.rs  helpers.rs  tasks.rs
